--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!doctype html>
 <html lang="en">
+ <style>
+.tag-1 {
+  background: url(../images/tag-1.png) no-repeat;
+  z-index: 7;
+  display: block;
+}
+#wall {
+  display: none;
+}
+
+ </style>
 <head>
   <meta charset="UTF-8">
   <title>CSS Graffiti Override</title>
@@ -14,7 +25,7 @@
     <div id="tag-2"></div>
     <div id="tag-3" class="slick wicked"></div>
     <div class="parent">
-      <div id="tag-4"></div>
+      <div id="tag-4" ></div>
     </div>
     <div class="parent">
       <div id="tag-5" class="slick"></div>
@@ -27,7 +38,7 @@
     </div>
     <div class="parent">
       <div>
-        <div id="tag-7" class="slick"></div>
+        </div>
       </div>
       <div></div>
     </div>
